Fixing display issue with column meta on mobile

--- a/modules/_columns/columns.scss
+++ b/modules/_columns/columns.scss
@@ -65,7 +65,7 @@ $module: '.wrap-columns-';
 
         .item {
           margin: 0;
-          display: block;
+          display: inline-block;
 
           &:first-child {
             margin-left: 0;
